# dualsense-command

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE  PRODUCT.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  package.json  skills-lock.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feedback.yml
.github/workflows/: README.md  ci.yml  release.yml
.out-of-scope/: README.md
crates/dscc-adapters/: Cargo.toml
crates/dscc-agent/: Cargo.toml
crates/dscc-agent/src/: adapter_runtime.rs  agent_types.rs  api.rs  assetto_shared_memory.rs  bind_addr.rs  built_in_presets.rs  config_model.rs  controller_registry.rs  edge_profiles.rs  effects.rs  env_policy.rs  forza_glyphs.rs  game_detection.rs  game_detection_cache.rs  game_modules.rs  http_security.rs  input_bridge.rs  lib.rs  main.rs  persistence.rs  profiles.rs  routes.rs  runtime.rs  runtime_constants.rs  runtime_paths.rs  steam_input.rs  support_bundle.rs  telemetry_runtime.rs  tests.rs  update_check.rs
crates/dscc-agent/src/api/: controllers.rs  effects.rs  input_bridge.rs  profiles.rs  settings.rs
crates/dscc-agent/src/controller_registry/: windows_pnp.rs
crates/dscc-agent/src/effects/: effect_tests.rs  forza_runtime.rs  materialization.rs  output_enhancements.rs  runtime_profiles.rs
crates/dscc-agent/src/game_detection/: catalog.rs  local_apps.rs  mod.rs  process_scanning.rs  steam.rs  types.rs
crates/dscc-agent/src/runtime/: device_scan.rs  hardware_output.rs  output_watchdog.rs
crates/dscc-agent/src/steam_input/: discovery.rs  display_labels.rs  mod.rs  paddle_preset.rs  parser.rs  path_safety.rs  writer.rs
crates/dscc-agent/src/tests/: api.rs  controllers.rs  edge_profiles.rs  effects.rs  forza_glyphs.rs  game_detection.rs  input_bridge.rs  mod.rs  perf_guards.rs  profiles.rs  steam_input.rs  support.rs  telemetry.rs  user_games.rs  web_dist.rs
crates/dscc-agent/src/tests/effects/: body_effects.rs  diagnostics.rs  lightbar.rs  manual_tests.rs  output_runtime.rs  profile_presets.rs  profile_runtime.rs  shift_detector.rs  telemetry_packets.rs  trigger_effects.rs
crates/dscc-agent/tests/: api_contract.rs
crates/dscc-agent/tests/fixtures/steam/: appmanifest_1551360.acf  appmanifest_2483190.acf  libraryfolders_fh5_fh6.vdf
crates/dscc-cli/: Cargo.toml
crates/dscc-cli/src/: main.rs
crates/dscc-core/: Cargo.toml
crates/dscc-device/: Cargo.toml
crates/dscc-device/src/: capabilities.rs  diagnostics.rs  edge_profile.rs  enumeration.rs  error.rs  events.rs  hidapi_transport.rs  lib.rs  manager.rs  metadata.rs  output.rs  registry.rs  session.rs  status.rs  transport.rs
crates/dscc-device/src/output/: encoding.rs  input.rs  tests.rs
crates/dscc-telemetry/: Cargo.toml
crates/dscc-tray/: Cargo.toml
crates/dscc-tray/src/: main.rs  windows_tray.rs
crates/dscc-tray/src/windows_tray/: health.rs  menu.rs  painting.rs  tests.rs
crates/dscc-virtual-output/: Cargo.toml
docs/: README.md  architecture-audit.md  architecture.md  contributing.md  game-module-contribution-guide.md  game-module-template.md  hardware-matrix.md  hardware-validation-template.md  linux-beta.md  module-manifest-format.md  production-readiness-plan.md  provenance-policy.md  release-trust.md  troubleshooting.md  windows-installer-smoke.md
docs/adr/: 0001-keep-dscc-local-first.md  0002-preserve-clean-room-provenance.md  0003-separate-profile-kinds.md  0004-use-typed-controller-output-boundary.md  0005-separate-game-modules-and-telemetry-adapters.md  0006-keep-community-modules-data-only.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
packaging/: package-msi.ps1  windows-installer-smoke.ps1
packaging/linux/: 70-dualsense-command-center.rules
tools/: check-perf.mjs
tools/dscc-hidmaestro-broker/: Program.cs  README.md  dscc-hidmaestro-broker.csproj
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: button-mapping-p95.mjs  curve-drag-budget.mjs  haptics-graph-parity.mjs  release-web-budget.mjs  snapshot-mapping.mjs  source-audit.mjs  visual-smoke.mjs
(+123 files in other folders)
