[package]
name = "dscc-cli"
version = "0.3.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
dscc-agent = { path = "../dscc-agent" }
dscc-device = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
