[package]
name = "dscc-device"
version = "0.2.8"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["hidapi-backend"]
hidapi-backend = ["dep:hidapi"]

[dependencies]
dscc-core.workspace = true

[target.'cfg(windows)'.dependencies]
hidapi = { version = "2.6.6", optional = true, default-features = false, features = ["windows-native"] }

[target.'cfg(not(windows))'.dependencies]
hidapi = { version = "2.6.6", optional = true }

[lib]
path = "src/lib.rs"
